code/tui/snapshots/fullscreen/frame/hooks_fullscreen.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Extensions ────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   Skills    Marketplace    MCP    Hooks    Plugins           │        
        │                                                              │        
        │  Configure Hooks                                             │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search Hook events                                      │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │> PreToolUse (0)  ·  Before tool execution                    │        
        │  PostToolUse (0)  ·  After successful tool execution         │        
        │  PostToolUseFailure (0)  ·  After tool execution fails       │        
        │  PostToolBatch (0)  ·  After a batch of tool calls resolves  │        
  ──────│  29 more below                                               │──────  
  > keep└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter confirm · Tab tabs · / search · r refresh · Esc close
