code/tui/snapshots/fullscreen/frame/input_history_search_cancelled.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                 
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                                          
  Enter send  ·  ← Dashboard  ·  shift+tab mode  ·  shift+↓/↑ effort
