code/tui/snapshots/fullscreen/frame/modal_wrapped_tabs.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: text
---
"                    "
"┌── Panel ─────[✗]─┐"
"│                  │"
"│   First tab      │"
"│   Second tab     │"
"│                  │"
"│> First item      │"
"│                  │"
"│                  │"
"│                  │"
"└──────────────────┘"
"                    "
