code/tui/snapshots/fullscreen/frame/model_list_unpinned.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> gateway-model                                                          │             
            │  Unconfigured model                                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  ↑↓ select · / search · p pin · Enter apply · Esc cancel                │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
