code/tui/snapshots/fullscreen/frame/model_no_configured_models.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Unconfigured model                                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p pin · Enter apply · Esc cancel
