code/tui/snapshots/fullscreen/frame/model_pin_catalog_order_fullscreen.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
fourth pinned=true
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
            │  second model                                                           │             
  ──────────│  third model                                                            │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p unpin · Enter apply · Esc cancel                                         

third pinned=true
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> third model                                                            │             
            │  fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
  ──────────│  second model                                                           │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p unpin · Enter apply · Esc cancel                                         

third pinned=false
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │  fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
            │  second model                                                           │             
  ──────────│> third model                                                            │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p pin · Enter apply · Esc cancel                                           

fourth pinned=false
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  first model                                                            │             
            │  second model                                                           │             
            │  third model                                                            │             
            │> fourth model                                                           │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p pin · Enter apply · Esc cancel
